trying to fix issue with image not loading on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,11 @@
 body{
     background-color: #494949;
     padding-top: 8vw; 
+    background-image: url(https://elijohnson565.github.io/RustysRVs/images/leaves.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
 div{
@@ -20,10 +25,8 @@ h1{
 .navbar{
     padding: 0.8vw;
     font-size: 2vw;
-    background-image: url(https://elijohnson565.github.io/RustysRVs/images/leaves.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: rgba(5, 58, 23, 0.39);
+    
 }
 
 .navbar a{
